// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkdownPage /> with \`paragraphModifier\` props matches with snapshot 1`] = `
<div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="h1"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H1
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h2
      className="sc-bdVaJa gOhsip k-Title--margin"
      id="h2"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H2
    </h2>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h3
      className="sc-bdVaJa digoiN k-Title--margin"
      id="h3"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H3
    </h3>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="emphasis"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Emphasis
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kcNXMt"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="list"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      List
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX byUWJJ"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX byUWJJ"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX byUWJJ"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="link"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Link
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kcNXMt"
  >
    <p
      className="k-Paragraph k-Paragraph--primary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;

exports[`<MarkdownPage /> with children matches with snapshot 1`] = `
<div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="h1"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H1
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h2
      className="sc-bdVaJa gOhsip k-Title--margin"
      id="h2"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H2
    </h2>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h3
      className="sc-bdVaJa digoiN k-Title--margin"
      id="h3"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      H3
    </h3>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="emphasis"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Emphasis
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kcNXMt"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Emphasis, aka italics, with 
      <em>
        asterisks
      </em>
       or 
      <em>
        underscores
      </em>
      .
Strong emphasis, aka bold, with 
      <strong>
        asterisks
      </strong>
       or 
      <strong>
        underscores
      </strong>
      .
Combined emphasis with 
      <strong>
        asterisks and 
        <em>
          underscores
        </em>
      </strong>
      .
Strikethrough uses two tildes. ~~Scratch this.~~
    </p>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="list"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      List
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX hdtMub"
      >
        Unordered list can use asterisks
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX hdtMub"
      >
        Or minuses
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat kKOIuD"
  >
    <ul
      className="sc-bxivhb gKgImp sc-EHOje iGxsgV"
    >
      <li
        className="sc-ifAKCX hdtMub"
      >
        Or pluses
      </li>
    </ul>
  </div>
  <div
    className="sc-htpNat hXOnrW"
  >
    <h1
      className="sc-bdVaJa kYMeYS k-Title--margin"
      id="link"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Link
    </h1>
  </div>
  <div
    className="sc-htpNat dOYDhH"
  >
    <div
      className="sc-bwzfXH leelsx k-HorizontalStroke k-HorizontalStroke--size--big"
      color="#222"
      style={
        Object {
          "height": null,
          "width": null,
        }
      }
    />
  </div>
  <div
    className="sc-htpNat kcNXMt"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      <a
        className="k-Paragraph__link"
        href="https://www.google.com"
      >
        I'm an inline-style link
      </a>
    </p>
  </div>
</div>
`;
